tests/baselines/reference/breakInIterationOrSwitchStatement4.errors.txt
tests/cases/compiler/breakInIterationOrSwitchStatement4.ts(1,15): error TS2552: Cannot find name 'something'. Did you mean 'String'?


==== tests/cases/compiler/breakInIterationOrSwitchStatement4.ts (1 errors) ====
    for (var i in something) {
                  ~~~~~~~~~
!!! error TS2552: Cannot find name 'something'. Did you mean 'String'?
      break;
    }